--- a/Chikungunya/Death/chikungunya_death.ipynb
+++ b/Chikungunya/Death/chikungunya_death.ipynb
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('chikungunya_death_hospitalized.csv')\n",
+    "data = pd.read_csv('chikungunya_death_22.csv')\n",
     "data_test = pd.read_csv(r'/home/gabi/Documents/Chikungunya/chikungunya_death_20.csv')\n",
     "visualization(data, 'Survivors', 'Dead')"
    ]
